[gd_scene load_steps=13 format=2]

[ext_resource path="res://PruningMain.gd" type="Script" id=1]
[ext_resource path="res://PruningPlant.tscn" type="PackedScene" id=2]
[ext_resource path="res://PruningShears.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio_assets/Out of the Blue Instrumental Audacity.wav" type="AudioStream" id=4]
[ext_resource path="res://audio_assets/shears-sound.wav" type="AudioStream" id=5]
[ext_resource path="res://PruningHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://PruningCutSpot.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio_assets/you-lose.wav" type="AudioStream" id=8]
[ext_resource path="res://audio_assets/you-win.wav" type="AudioStream" id=9]
[ext_resource path="res://audio_assets/pruning_fail.wav" type="AudioStream" id=10]
[ext_resource path="res://audio_assets/pruning_success.wav" type="AudioStream" id=11]
[ext_resource path="res://audio_assets/pruning_despawn.wav" type="AudioStream" id=12]

[node name="PruningMain" type="Node2D"]
script = ExtResource( 1 )
PruningCutSpot = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0.137255, 0.196078, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PruningHUD" parent="." instance=ExtResource( 6 )]

[node name="PruningPlant" parent="." instance=ExtResource( 2 )]
position = Vector2( 238.755, 411.994 )
scale = Vector2( 1.5, 1.5 )
collision_mask = 0

[node name="PruningShears" parent="." instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 246.047, 450.822 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 4 )
volume_db = -7.0
area_mask = 2147483649

[node name="ShearsSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 5 )
volume_db = -2.0
area_mask = 2147483649

[node name="YouWin" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 9 )

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 11 )

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 10 )
volume_db = 4.0

[node name="DespawnSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 12 )
volume_db = 2.0

[node name="YouLose" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 360 )
stream = ExtResource( 8 )
volume_db = -6.0

[connection signal="quick_bounce" from="." to="PruningPlant" method="quick_bounce"]
[connection signal="snip" from="." to="PruningShears" method="snip"]
[connection signal="exit_game" from="PruningHUD" to="." method="exit_game"]
[connection signal="start_game" from="PruningHUD" to="." method="new_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
